Fixed All offers UI alignments

--- a/src/Components/FlipkartAllOffersCard/index.css
+++ b/src/Components/FlipkartAllOffersCard/index.css
@@ -1,5 +1,5 @@
 .FkAll-main {
-  width: 44%;
+  width: 180px;
 
   height: fit-content;
   border-radius: 5px;
